<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.electrogoods.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_chat"
        android:name="com.example.electrogoods.ui.chat.ChatFragment"
        android:label="@string/title_chat"
        tools:layout="@layout/fragment_chat" />

    <fragment
        android:id="@+id/navigation_sell"
        android:name="com.example.electrogoods.ui.sell.SellFragment"
        android:label="@string/title_sell"
        tools:layout="@layout/fragment_sell" />

    <fragment
        android:id="@+id/navigation_ads"
        android:name="com.example.electrogoods.ui.ads.AdsFragment"
        android:label="@string/title_ads"
        tools:layout="@layout/fragment_ads" />

    <fragment
        android:id="@+id/navigation_account"
        android:name="com.example.electrogoods.ui.account.AccountFragment"
        android:label="@string/title_acc"
        tools:layout="@layout/fragment_account" />

</navigation>